# nengo-rs

./: .gitignore  Cargo.toml  README.md  setup.cfg  setup.py
nengo_rs/: index_conv.py  simulator.py
nengo_rs/tests/: test_dev.py  test_index_conv.py
src/: binding.rs  engine.rs  lib.rs  operator.rs  probe.rs  signal.rs  sync.rs  venv.rs
src/binding/: engine.rs  operator.rs  probe.rs  signal.rs
src/operator/: copy.rs  dot_inc.rs  elementwise_inc.rs  reset.rs  sim_neurons.rs  sim_process.rs  sim_pyfunc.rs  time_update.rs
