[package]
name = "nengo-rs"
version = "0.1.0"
authors = ["Jan Gosmann <jan@hyper-world.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13.1"

[dependencies.numpy]
git = "https://github.com/PyO3/rust-numpy.git"

[dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]

[dependencies.pyo3]
version = "0.11.1"