[package]
name = "nengo-rs"
version = "0.1.0"
authors = ["Jan Gosmann <jan@hyper-world.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.maturin]
requires-dist = ["nengo~=3.0.0"]

[lib]
name = "nengo_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray = "0.13.1"
numpy = "0.11.0"
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

[dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]

[dependencies.pyo3]
version = "0.11.1"